# stem_tracker

./: CMakeLists.txt  package.xml
config/: config.yml  config_stemtrack.yml  pressure_sensor_touched_max.yml  rviz_config.rviz  rviz_config_for_vid.rviz  whisker_sim_values.yml  whisker_touched_max.yml
doc/: distance_sensor_status_specs_and_io.ods  flex_sensor_status_specs_and_io.ods
exp_2/: exp_truss_dangle.ods  plot_psd.m
exp_touched_at/: topsens_touch.ods
include/: configurer.h  debugfunctions.h  kinematic_tree.h  logginginterface.h  loggingmacros.h  markerids.h  robotconfig.h  robotinterface.h  robotrepresentation.h  robotstatus.h  stem_tracker.h  stem_tracker.hpp  stemrepresentation.h  stemtrackconfigurer.h  stemtrackcontroller.h  stemtrackermain.h  stemtrackmonitor.h  topsensor_locator.h  visualizationinterface.h  whisker_simulator.h  whiskergripperinterpreter.h  whiskerinterpreter.h
src/: configurer.cpp  debugfunctions.cpp  kinematic_tree.cpp  logginginterface.cpp  robotconfig.cpp  robotinterface.cpp  robotrepresentation.cpp  robotstatus.cpp  stem_tracker.cpp  stemrepresentation.cpp  stemtrackconfigurer.cpp  stemtrackcontroller.cpp  stemtrackmonitor.cpp  topsensor_locator.cpp  visualizationinterface.cpp  whisker_simulator.cpp  whiskergripperinterpreter.cpp  whiskerinterpreter.cpp
tools/: .show_live_plots.sh.swp  rviz_whisker_demo.sh  show_live_plots.sh  show_topsens_exp_plots.sh
