<?xml version="1.0"?>
<package>
<name>stem_tracker</name>
<version>0.0.0</version>
<description>finding virtual tomato's</description>

  <maintainer email="r.p.t.soetens@student.tue.nl">robin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
