<?xml version="1.0"?>
<package>
<name>stem_tracker</name>
<version>0.0.0</version>
<description>finding virtual tomato's</description>

  <maintainer email="r.p.t.soetens@student.tue.nl">robin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>code_profiler</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>amigo_whole_body_controller</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>code_profiler</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
